Integrating Billing Service

--- a/Billing/CSS/BillingStylesheet.css
+++ b/Billing/CSS/BillingStylesheet.css
@@ -2,7 +2,7 @@
 body{
     background: #ffffff;
     font-family: Arial,sans-serif ;
-    font-size:medium;
+    font-size:12px;
     margin:0 0 0 0 ;
     } 
 
@@ -26,26 +26,27 @@ body{
     
     .bluebutton
     {    
-            background:#0054c2; 
-            color:White;
+            background:#edeefc; 
+            color:#000000;
             font-size:larger;
-            font-weight:bold;
             margin-left:auto;
-            margin-right:auto;
-            padding:10px 10px 15px 15px;
-            border-radius:10px;
-            text-align:left;
-    }
+            margin-right:auto;            
+            border-radius:6px;
+            border-width:1px;
+            text-align:center;
+    height: 30px;
+}
     
 
     .bluesmallbutton
     {    
-            background:#0054c2; 
-            color:White;
+             background:#edeefc; 
+            color:#000000;
             margin-left:auto;
             margin-right:auto;
             text-align:left;
-            border-radius:3px;
+            border-radius:6px;
+            border-width:1px;
     }
 
     .small_gap
@@ -59,7 +60,7 @@ body{
        background:#0054c2;  
        color:White;
        text-align:center;
-       border-radius: 20px;
+       border-radius: 15px;
        font-weight:bold;
       }
 
@@ -79,21 +80,25 @@ body{
      .textbox
      {
         border-color:#0054c2;  
-            
+         border-width:1px;    
       }
       
       .combolabel
       {
-         font-size:medium;   
+         
+        
       }
 
    
    /*Billing main page */
    .billinginstructions    
     {
-        margin-left:50px;
-        margin-right:50px;
-    }
+        margin-left:10px;
+        margin-right:10px;
+        font-family:Arial;
+        font-size:12px;
+   
+}
     
    /*Billing main page */
      /*Start- Add PublishingService Page*/         
@@ -105,7 +110,7 @@ body{
         .subscriptionlabel_title
         {
             width:200px;  
-            font-size:medium;
+            font-size:12px;
             font-weight:normal;       
         }
  
@@ -141,25 +146,22 @@ body{
          
         .tabgridbutton
         {
-            background:#0054c2; 
-            color:White;
+               background:#edeefc; 
+            color:#000000;
             width : 75px;
             padding:4px 4px 4px 4px;
-            border-style:outset;
+            
             border-radius:8px;
         }
         
         .tabgridpage
         {
-        border-style:solid;
-        border-width: 1px;
-        margin-left  :auto;
+        border: 1px solid #0054c2;
+margin-left  :0px;
         margin-right:auto;
-        border-color:#0054c2;
-        border-width:thin;
-        border-radius: 20px;
+        border-radius: 15px;
         font-weight:bold;
-        width:80%; 
+        width:100%;
         }
             
         .shortrow
@@ -179,7 +181,14 @@ body{
        width:80%;  
       }
       
-
+        .billinglabel
+      {
+          font-family:Arial;
+      font-size:16px;
+      color:#444444;
+      height:25px;
+      }
+      
       .invoicepopup{
         display: none;
         position: absolute;
@@ -188,8 +197,8 @@ body{
         background: #fefefe;
         color: #000000;
         border: 1px solid #0054c2;
-        border-radius: 20px;
-        font-size:small;
+        border-radius: 15px;
+        font-size:11px;
       }
          
       .singleinvoicetable   
@@ -202,7 +211,7 @@ body{
          
       .singleinvoicedescription
       {
-          font-size:smaller;
+          font-size:11px;
           color:#666666;
       }
       
@@ -227,13 +236,13 @@ body{
       .cancelblock
       {
        border-style:solid;
-       border-width:thin;
-       margin-left  :auto;
-       margin-right:auto;
+       border-width:1px;
+       margin  :10px;
+       padding:10px;
        border-color:#0054c2;
-       border-radius: 20px;
+       border-radius: 15px;
        background:#FFFFFF;  
-       width:45%;
+       
       }
       
       
@@ -269,10 +278,10 @@ body{
          margin-left  :auto;
          margin-right :auto;
          border-color:#0054c2;
-         border-width:thin;
-         border-radius: 20px;
+         border-width:1px;
+         border-radius: 15px;
          font-weight:bold;
-         width:85%;
+         width:100%;
         } 
           
         .branding_desc
@@ -287,7 +296,7 @@ body{
          padding:2px 2px 2px 2px;
          width : 100%;
          text-align:center;
-         font-size:small;
+         font-size:11px;
          font-weight:normal;
          }
          /*table.brandingitem:hover {background-color:#AED4D4}               */
